tests/samples/negative/generics/qualified_explicit_generic_unknown_import.ax
module qualified_explicit_generic_unknown_import;

fn main() -> i32 {
    return missing.id<i32>(1);
}
